--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,8 @@ dependency_overrides:
   intl: 0.17.0
 
 dev_dependencies:
-  
+  flutter_test:
+    sdk: flutter
 
 flutter:
   uses-material-design: true
