--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -48,6 +48,21 @@ android {
         multiDexEnabled true
     }
 
+    flavorDimensions "app"
+    productFlavors {
+        develop {
+            dimension "app"
+            applicationIdSuffix ".dev"
+        }
+        staging {
+            dimension "app"
+            applicationIdSuffix ".stg"
+        }
+        production {
+            dimension "app"
+        }
+    }
+
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
