--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,18 +12,24 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   cupertino_icons:
-  firebase_core: ^1.0.3
+  firebase_core: ^1.2.0
   # firebase_analytics: ^7.1.1 no nullsafe... skip it for now
-  firebase_auth: ^1.0.2
+  firebase_auth: ^1.2.0
 
   # google_sign_in:
   # apple_sign_in:
-  get: ^4.1.3
+  get: ^4.1.4
   get_storage: ^2.0.2
   
   crypto: ^3.0.1
   http: ^0.13.1
   csv: ^5.0.0
+
+  # animations
+  animated_background: ^2.0.0
+  glassmorphism: ^2.0.1
+  avatar_glow: ^2.0.1
+  hive: ^2.0.4
 
 
 dependency_overrides:
@@ -37,5 +43,5 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/images/default.png
-    - assets/images/defaultDark.png
+    - assets/images/
+    - .env
